@@ -3,6 +3,11 @@ Release notes for OpenLava versions
 4.0beta2
 ============
 
+-- Implement a set of fixes related to fairshare job selection which were
+   causing the scheduler to slowly dispatch jobs even if slots were available.
+-- If the job group specified by -G at submission time is not part of
+   the fairshare tree, then use the user name instead to dynamically create the
+   fairshare user account.
 -- Fixed slot based and resource preemption job replay bug. Fixed slot based
    preemption memory leak, and man pages.
 -- Implement a slot based queue preemption in which jobs are suspended,
